// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MySQL DDL Snapshots > All field types DDL output > should match snapshot for all types schema 1`] = `
"CREATE TABLE AllTypes (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  stringField VARCHAR(255) NOT NULL,
  textField TEXT NOT NULL,
  intField INT NOT NULL,
  longField BIGINT NOT NULL,
  bigintField BIGINT NOT NULL,
  floatField FLOAT NOT NULL,
  doubleField DOUBLE NOT NULL,
  boolField TINYINT(1) NOT NULL,
  booleanField TINYINT(1) NOT NULL,
  uuidField CHAR(36) NOT NULL,
  timestampField DATETIME NOT NULL,
  timestamptzField DATETIME NOT NULL,
  dateField DATE NOT NULL,
  timeField TIME NOT NULL,
  jsonField JSON NOT NULL,
  binaryField BLOB NOT NULL,
  decimalField DECIMAL(38, 9) NOT NULL,
  PRIMARY KEY (\`$id\`)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > All field types DDL output > should match snapshot for all types schema with options 1`] = `
"CREATE TABLE IF NOT EXISTS AllTypes (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  stringField VARCHAR(255) NOT NULL,
  textField TEXT NOT NULL,
  intField INT NOT NULL,
  longField BIGINT NOT NULL,
  bigintField BIGINT NOT NULL,
  floatField FLOAT NOT NULL,
  doubleField DOUBLE NOT NULL,
  boolField TINYINT(1) NOT NULL,
  booleanField TINYINT(1) NOT NULL,
  uuidField CHAR(36) NOT NULL,
  timestampField DATETIME NOT NULL,
  timestamptzField DATETIME NOT NULL,
  dateField DATE NOT NULL,
  timeField TIME NOT NULL,
  jsonField JSON NOT NULL,
  binaryField BLOB NOT NULL,
  decimalField DECIMAL(38, 9) NOT NULL,
  PRIMARY KEY (\`$id\`)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema 1`] = `
"CREATE TABLE Post (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  title VARCHAR(255) NOT NULL UNIQUE,
  content TEXT NOT NULL,
  authorId VARCHAR(255) NOT NULL UNIQUE,
  categoryId VARCHAR(255),
  publishedAt DATETIME,
  viewCount INT NOT NULL,
  isPublished TINYINT(1) NOT NULL,
  metadata JSON NOT NULL,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (title),
  UNIQUE (authorId)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Complex schema with relations DDL output > should match snapshot for complex schema with all options 1`] = `
"CREATE TABLE IF NOT EXISTS Post (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  title VARCHAR(255) NOT NULL UNIQUE,
  content TEXT NOT NULL,
  authorId VARCHAR(255) NOT NULL UNIQUE,
  categoryId VARCHAR(255),
  publishedAt DATETIME,
  viewCount INT NOT NULL,
  isPublished TINYINT(1) NOT NULL,
  metadata JSON NOT NULL,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (title),
  UNIQUE (authorId)
) ENGINE=InnoDB CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"
`;

exports[`MySQL DDL Snapshots > Edge case DDL output > should match snapshot for empty schema (only system fields) 1`] = `
"CREATE TABLE EmptyEntity (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  PRIMARY KEY (\`$id\`)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with all modifiers 1`] = `
"CREATE TABLE Modifiers (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  requiredField VARCHAR(255) NOT NULL UNIQUE,
  optionalField VARCHAR(255),
  uniqueField VARCHAR(255) NOT NULL UNIQUE,
  requiredUnique VARCHAR(255) NOT NULL UNIQUE,
  PRIMARY KEY (\`$id\`),
  UNIQUE (requiredField),
  UNIQUE (uniqueField),
  UNIQUE (requiredUnique)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with reserved words 1`] = `
"CREATE TABLE Reserved (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  \`select\` VARCHAR(255) NOT NULL,
  \`from\` VARCHAR(255) NOT NULL,
  \`where\` VARCHAR(255) NOT NULL,
  \`order\` VARCHAR(255) NOT NULL,
  \`group\` VARCHAR(255) NOT NULL,
  PRIMARY KEY (\`$id\`)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Edge case DDL output > should match snapshot for schema with special characters in name 1`] = `
"CREATE TABLE \`My-Special_Entity\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema 1`] = `
"CREATE TABLE Product (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  sku VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INT NOT NULL,
  isActive TINYINT(1) NOT NULL,
  createdAt DATETIME NOT NULL,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema with indexes 1`] = `
"CREATE TABLE Product (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  sku VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INT NOT NULL,
  isActive TINYINT(1) NOT NULL,
  createdAt DATETIME NOT NULL,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
) ENGINE=InnoDB;

CREATE INDEX idx_Product_id ON Product (id);
CREATE INDEX idx_Product_sku ON Product (sku);
CREATE INDEX idx_Product_name ON Product (name);
CREATE INDEX idx_Product_price ON Product (price);"
`;

exports[`MySQL DDL Snapshots > Indexes and constraints DDL output > should match snapshot for indexed schema without system fields 1`] = `
"CREATE TABLE Product (
  id CHAR(36) NOT NULL UNIQUE,
  sku VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL UNIQUE,
  price DECIMAL(38, 9) NOT NULL UNIQUE,
  quantity INT NOT NULL,
  isActive TINYINT(1) NOT NULL,
  createdAt DATETIME NOT NULL,
  UNIQUE (id),
  UNIQUE (sku),
  UNIQUE (name),
  UNIQUE (price)
) ENGINE=InnoDB;

CREATE INDEX idx_Product_id ON Product (id);
CREATE INDEX idx_Product_sku ON Product (sku);
CREATE INDEX idx_Product_name ON Product (name);
CREATE INDEX idx_Product_price ON Product (price);"
`;

exports[`MySQL DDL Snapshots > MySQL-specific features DDL output > should match snapshot for schema with MyISAM engine 1`] = `
"CREATE TABLE \`User\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=MyISAM;"
`;

exports[`MySQL DDL Snapshots > MySQL-specific features DDL output > should match snapshot for schema with table comment 1`] = `
"CREATE TABLE \`User\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB COMMENT='User accounts table';"
`;

exports[`MySQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema 1`] = `
"CREATE TABLE \`User\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with IF NOT EXISTS 1`] = `
"CREATE TABLE IF NOT EXISTS \`User\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with charset and collation 1`] = `
"CREATE TABLE \`User\` (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"
`;

exports[`MySQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema with custom table name 1`] = `
"CREATE TABLE users_table (
  \`$id\` VARCHAR(255) NOT NULL,
  \`$type\` VARCHAR(255) NOT NULL,
  \`$version\` INT NOT NULL DEFAULT 1,
  \`$createdAt\` BIGINT NOT NULL,
  \`$updatedAt\` BIGINT NOT NULL,
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  PRIMARY KEY (\`$id\`),
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB;"
`;

exports[`MySQL DDL Snapshots > Simple schema DDL output > should match snapshot for simple schema without system fields 1`] = `
"CREATE TABLE \`User\` (
  id CHAR(36) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  name VARCHAR(255) NOT NULL,
  age INT,
  UNIQUE (id),
  UNIQUE (email)
) ENGINE=InnoDB;"
`;
